unpackaged/main/default/objects/ServiceResource/fields/SA_Department__c.field-meta.xml
<CustomField>
    <fullName>SA_Department__c</fullName>
    <description>This Field is a High Level break out of which side the Resource is on</description>
    <label>SA Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Operations North</fullName>
            </value>
            <value>
                <fullName>Artificial Lift</fullName>
            </value>
            <value>
                <fullName>Operations South</fullName>
            </value>
            <value>
                <fullName>IOC</fullName>
            </value>
            <value>
                <fullName>Route Operators</fullName>
            </value>
            <value>
                <fullName>Recovery Operators</fullName>
            </value>
            <value>
                <fullName>Plant Operators</fullName>
            </value>
            <value>
                <fullName>Operations Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>