unpackaged/main/default/objects/ServiceResource/fields/SA_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>SA_Sub_Group__c</fullName>
    <description>This is the Sub Groups of the Service Resources and the Sub groups they belong to</description>
    <label>SA Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Artificial Lift Tech</fullName>
            </value>
            <value>
                <fullName>Maintenance I&amp;E</fullName>
            </value>
            <value>
                <fullName>Maintenance Integrity</fullName>
            </value>
            <value>
                <fullName>Maintenance Mechanic</fullName>
            </value>
            <value>
                <fullName>Maintenance Pipeline</fullName>
            </value>
            <value>
                <fullName>Operations Lead</fullName>
            </value>
            <value>
                <fullName>Operations Recovery Operator</fullName>
            </value>
            <value>
                <fullName>Operations Route Operator</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>IOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>