unpackaged/main/default/objects/ServiceResource/fields/Vendor_User__c.field-meta.xml
<CustomField>
    <fullName>Vendor_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor User</label>
    <type>Checkbox</type>
</CustomField>