unpackaged/main/default/objects/ServiceResource/listViews/All_ServiceResources.listView-meta.xml
<ListView>
    <fullName>All_ServiceResources</fullName>
    <columns>Name</columns>
    <columns>ResourceType</columns>
    <columns>FSL__GanttLabel__c</columns>
    <columns>IsActive</columns>
    <columns>SA_Department__c</columns>
    <columns>SA_Sub_Group__c</columns>
    <columns>IsOptimizationCapable</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Service Resources</label>
</ListView>